--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,36 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .dropdown{
+    width: 400px;
+    margin: 100px auto;
+    position: relative;
   }
-}
+  .dropdown .dropdown-btn{
+    padding: 15px 20px;
+    background: #fff;
+    box-shadow: 3px 3px 10px 6px rgba(0,0,0,0.06);
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
+ .dropdown .dropdown-content{
+  position: absolute;
+  top: 110%;
+  padding: 15px;
+  background: #fff;
+  box-shadow: 3px 3px 10px 6px rgba(0,0,0,0.06);
+  width: 92%;
+ }
+
+ .dropdown .dropdown-content .dropdown-item{
+padding: 10px;
+cursor: pointer;
+transition: all 0.2s;
+
+ }
+ .dropdown .dropdown-content .dropdown-item:hover{
+  background: #f4f4f4;
+ }
